calico-enterprise_versioned_docs/version-3.14/network-policy/generate-policy-recommendation.mdx
---
description: Generate a Calico Enterprise policy recommendation to secure unprotected workloads.
---

# Generate policy recommendation

## Big picture

Generate a {{prodname}} policy recommendation to secure workloads.

## Value

After installing {{prodname}}, one of the first things developers need to do is secure unprotected workloads that do not have network policy enforcement. (For example, by default, Kubernetes pods accept traffic from any source.) The {{prodname}} Manager policy recommendation feature helps developers with minimal, to no experience to generate a {{prodname}} network policy to secure workloads.

This self-service feature for developers allows network security teams to focus on the overall network policy labeling, evaluation, RBAC, and workflow.

## Features

This how-to guide uses the following {{prodname}} features:

- **Flow logs**
- **StagedNetworkPolicy** resource
- **NetworkPolicy** resource (optional)

## Concepts

### Policy recommendations: when and why

A typical scenario for using the policy recommendation feature is:

- Your Kubernetes clusters are up and running under {{prodname}}
- Clusters are successfully running, and workloads have been running long enough to gather traffic for applications
- Developers want to secure their workloads, pods, and endpoints.

Developers without any experience using {{prodname}} network policy, can simply specify a few parameters, click a button, and generate a valid {{prodname}} network policy to protect their workloads.

### Default tier and Kubernetes policies

During installation, all Kubernetes network policies land in the **default tier** in {{prodname}} Manager. This is perfect because the minimum permissions for non-Admin users include the default tier. Developers can run the policy recommendation feature in the default tier.

### Preview and stage the policy

After developers get a recommended {{prodname}} network policy to secure the workload, they can **preview it**, and **stage it** to observe the impact of a recommended policy on network traffic before applying it (if they are granted permissions). Remember, the format of a recommended {{prodname}} network policy is valid and accurate; it is only totally “valid” when you validate the intended results during staging.

### Tips for generating policy recommendations

The policy recommendation feature does not look into existing policies, but into _historial flow log entries that match a request_. Because of this, developers should run their workloads for a reasonable amount of time so “typical network traffic” for their application can be gathered.

## Before you begin...

### Flow logs

Ensure that flow logs are generated and sent to Elasticsearch.

### Permissions

- To generate a policy recommendation, you must have permission to read flow logs.
- To stage a policy recommendation, you must have permission to create a **StagedNetworkPolicy** in the namespace of the workload that is being secured.
- To enforce a policy, you must have permission to create a **NetworkPolicy** in the namespace of the workload that is being secured. It is recommended to stage a policy to verify its impact before enforcing it.

## How to

### Generate a recommended network policy

To generate a {{prodname}} network policy recommendation, go the **Recommend Policy** page,

![Navigate to Policy Recommendation](/img/calico-enterprise/3.14/generate-policy-recommendation/recommend-policy-action-bar-3.14.png)

and specify:

- **Time Range**
- **Namespace**
- **Name** of the workload
- (optional) "Unprotected only" checkbox considers only historical flow logs that are not explicitly allowed by a network policy.

And click, **Recommend**.

![Generate a Policy Recommendation](/img/calico-enterprise/3.14/generate-policy-recommendation/recommend-policy-screen-3.14.png)

If relevant flow logs are found within the selected time range for the workload endpoint, the recommended policy is displayed in the **Create Policy** screen.

![Preview or Stage a Policy Recommendation](/img/calico-enterprise/3.14/generate-policy-recommendation/create-policy-action-buttons-3.14.png)

Then, you can assess the impact of the recommended policy using **Preview** and/or **Stage** to observe the effect on traffic without impacting the actual traffic flows.

:::note

We do not recommend using **Enforce** without first assessing the impact of the recommended policy using **Preview** and/or **Stage**.

:::

## Above and beyond

- To preview the impact of a recommended policy before applying it see, [Preview policy impacts](policy-impact-preview.mdx)
- To observe the impact of a recommended policy on network traffic without affecting flows, see [Create staged policy](staged-network-policies.mdx)
